<resources>
    <string name="app_name">Swaad</string>
    <string name="new_user_signup"><u>New user? SignUp!!</u></string>
    <string name="order_placed">Order Placed</string>
    <string name="cart_empty">You don\'t have anything in your cart!!</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="login">LOGIN</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_button">Login Button</string>
    <string name="logout">Logout</string>
    <string name="register">REGISTER</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_e_mail">Enter E-Mail</string>
    <string name="enter_address">Enter Address</string>
    <string name="already_registered_sign_in">Already registered? Sign In!!</string>
    <string name="add">Add</string>
    <string name="_0">0</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="cost_for_one">Cost for one: ₹ %1$s</string>
    <string name="place_order">Place Order(Total: Rs. %1$d)</string>
    <string name="item_serial">%1$d</string>
    <string name="item_cost">₹ %1$s</string>
    <string name="logoimage_animation">LogoImage Animation</string>
    <string name="app_logo">App logo</string>
    <string name="user_image">User Image</string>
    <string name="button_to_decrease_quantity">Button to decrease quantity</string>
    <string name="button_to_add_quantity">Button to add quantity</string>
    <string name="incorrect_creds">Incorrect Credentials</string>
    <string name="some_error_occurred">Some Error Occurred</string>
</resources>