<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileLayout"
        style="@style/Widget.SignIN.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:focusable="true"
        android:nextFocusDown="@id/passLayout"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field_background"
            android:drawablePadding="3dp"
            android:focusable="true"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/textColor2"
            android:textColorHint="@color/text_color_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLayout"
        style="@style/Widget.SignIN.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:nextFocusDown="@null"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field_background"
            android:focusable="true"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/textColor2"
            android:textColorHint="@color/text_color_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/login_button"
        android:src="@drawable/ic_arrow_right"
        app:backgroundTint="@color/hintTextColor"
        app:fabSize="normal"
        app:maxImageSize="34dp"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/new_user_signup"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <!--
            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spinKitLogin"
                style="@style/SpinKitView.Large.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:SpinKit_Color="@color/floGreen" />
    -->

</LinearLayout>