<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="8">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".6">

                <TextView
                    android:id="@+id/txtSerial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="#000"
                    android:textSize="20sp"
                    tools:text="1" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4.4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtFoodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Food Item" />

                <TextView
                    android:id="@+id/txtFoodPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Rs.100" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="10dp"
                    android:background="@color/green"
                    android:padding="2dp"
                    android:text="@string/add"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:backgroundTint="@null" />

                <LinearLayout
                    android:id="@+id/quantityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/btnMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/green"
                        android:padding="2dp"
                        android:contentDescription="@string/button_to_decrease_quantity"
                        android:src="@drawable/ic_min"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:backgroundTint="@null" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/btnPlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/green"
                        android:padding="2dp"
                        android:contentDescription="@string/button_to_add_quantity"
                        android:src="@drawable/ic_add"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:backgroundTint="@null" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>