<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.dashboard.CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnPlaceOrder"
        android:layout_marginVertical="10dp"
        tools:listitem="@layout/item_menu" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:backgroundTint="@null"
        tools:text="Place Order(Total: Rs.00)" />

    <RelativeLayout
        android:id="@+id/rlFinal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/done"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/order_placed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/done"
            android:layout_centerHorizontal="true"
            android:text="@string/order_placed"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_border"
            android:elevation="100dp"
            android:text="@string/ok"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/empty"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/empty_cart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/empty"
            android:layout_centerHorizontal="true"
            android:text="@string/cart_empty"
            android:textAlignment="center"
            android:textColor="@color/darkRed"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_border"
            android:elevation="100dp"
            android:text="@string/go_shopping"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </RelativeLayout>

</RelativeLayout>